maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:64: error: ';' expected but 'else' found.
  else prendBiscuit()
  ^Escaper:67: error: expected class or object definition
def testMurGauche() : Boolean =
^Escaper:79: error: Unmatched closing brace '}' ignored here
}
^