maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  while (!estSurBiscuit())
  {
    if (isDirectionFree(Direction.NORD))
    {
      setDirection(Direction.NORD)
      avance()
    }
    else
    {
      droite()
      keepHandOnSideWall()
    }
  }
  prendBiscuit()
}

def keepHandOnSideWall()
{ 
  if(!estSurBiscuit())
  {
    var SommedesVirages = -1
    do{
      if(estSurBiscuit())
      {
        prendBiscuit()
      }
      var murGauche = testMurGauche()
      if (!murGauche)
      {
        gauche()
        avance()
        SommedesVirages += 1
      }
      if (murGauche && estFaceMur())
      {
        droite()
        SommedesVirages += -1
      }
      if (murGauche && !estFaceMur())
      {
        avance()
      }
    }while (SommedesVirages != 0) 
  }
}

  def isDirectionFree(dir : Direction) : Boolean =
  {
    var direction = getDirection()
    setDirection(dir)
    if (estFaceMur())
    {
      setDirection(direction)
      return false
    }
    else
    {
      setDirection(direction)
      return true
    }
  }
  else prendBiscuit()
}

def testMurGauche() : Boolean =
{
  gauche()
  if (estFaceMur())
  {
    droite()
    return true
  }
  droite()
  return false
}